--- a/web/interface.html
+++ b/web/interface.html
@@ -5,9 +5,11 @@
     <title>Chess</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.6.3/svg.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 </head>
 <body>
     <div id="board"></div>
+    <button type="button" onclick="clearAndReset()">New Game</button>
     <script src="client.js"></script>
 </body>
 
