--- a/web/interface.html
+++ b/web/interface.html
@@ -10,6 +10,7 @@
 <body>
     <div id="board"></div>
     <button type="button" onclick="clearAndReset()">New Game</button>
+    <div id="whose_move"></div>
     <script src="client.js"></script>
 </body>
 
