--- a/web/interface.html
+++ b/web/interface.html
@@ -23,6 +23,28 @@
             display: none;
         }
 
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background: rgba(255, 255, 255, .8) url('http://i.stack.imgur.com/FhHRx.gif') 50% 50% no-repeat;
+        }
+
+        /* When the body has the loading class, we turn
+           the scrollbar off with overflow:hidden */
+        body.loading {
+            overflow: hidden;
+        }
+
+        /* Anytime the body has the loading class, our
+           modal element will be visible */
+        body.loading .modal {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -44,7 +66,8 @@
     <button type="button" id="useAI" onclick="toggleAI()">Enable AI</button>
 </div>
 <div id="whose_move"></div>
-<script src="client.old.js"></script>
+<div class="modal"></div>
+<script src="client.js"></script>
 </body>
 
 </html>
