Fix to_algebraic_notation, add argparser

--- a/web/interface.html
+++ b/web/interface.html
@@ -64,6 +64,7 @@
     <button type="button" onclick="undo()">Undo</button>
     <button type="button" onclick="downloadMoves()">Download Moves</button>
     <button type="button" id="useAI" onclick="toggleAI()">Enable AI</button>
+    <button type="button" id="surrender" onclick="surrender()">Surrender</button>
 </div>
 <div id="whose_move"></div>
 <div class="modal"></div>
